// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Mistakes /> should render correctly for no mistakes 1`] = `
<div
  className="game__mistakes"
/>
`;

exports[`<Mistakes /> should render correctly for three mistakes 1`] = `
<div
  className="game__mistakes"
>
  <div
    className="wrong"
  />
  <div
    className="wrong"
  />
  <div
    className="wrong"
  />
</div>
`;
